--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -160,6 +160,8 @@
 	"billing.subscription.show-features": "Ver todas las funciones",
 	"billing.subscription.title": "Niveles de subscripción",
 	"billing.success": "Suscripción exitosa",
+	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
+	"billing.tier_select.title": "Nivel de suscripción",
 	"billing.trial.title": "30 días de prueba",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
