Add enterprise tier info

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -108,7 +108,7 @@
 	"billing.cost_per_usage.description": "Si supereu els límits, s'aplicarà el cost per ús.",
 	"billing.country": "País",
 	"billing.custom_plan": "Pla personalitzat",
-	"billing.customized_plan": "Si sou una start-up o necessiteu ampliar i personalitzar un pla per al vostre negoci, no dubteu a posar-vos en contacte amb nosaltres.",
+	"billing.enterprise_ready": "Llest par a l'empresa",
 	"billing.estimate_cost": "Estima el teu cost",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
@@ -153,7 +153,7 @@
 	"billing.quotas.up-to": "Fins a",
 	"billing.save_budget": "Guardar límit de pressupost",
 	"billing.save_continue": "Desar i Continuar",
-	"billing.self_hosted": "Poseu-vos en contacte amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
+	"billing.self_hosted": "<a href=\"{{ url }}\">Poseu-vos en contacte</a> amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
 	"billing.state": "Província",
 	"billing.subscription.country": "Seleccioneu el país de facturació",
 	"billing.subscription.help": "Tots els plans de subscripció tenen accés a totes les funcions.",
