--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -116,12 +116,12 @@
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
 	"billing.company": "Company",
-	"billing.contact": "Contact us",
+	"billing.contact": "Contact",
 	"billing.cost_per_usage": "Cost-per-usage",
 	"billing.cost_per_usage.description": "If you exceed the limits, cost per usage will be applied.",
 	"billing.country": "Country",
 	"billing.custom_plan": "Custom plan",
-	"billing.customized_plan": "If you are a start up or you need to expand and customize a plan for your business, please do not hesitate to contact us. ",
+	"billing.enterprise_ready": "We are enterprise ready",
 	"billing.estimate_cost": "Estimate your cost",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
@@ -166,7 +166,7 @@
 	"billing.quotas.up-to": "Up to",
 	"billing.save_budget": "Save as budget limit",
 	"billing.save_continue": "Save & Continue",
-	"billing.self_hosted": "Contact us if you want your data self-hosted using NucliaDB to know all payment details.",
+	"billing.self_hosted": "<a href=\"{{ url }}\">Contact us</a> if you want your data self-hosted using NucliaDB to know all payment details.",
 	"billing.state": "State",
 	"billing.subscription.country": "Select the billing country",
 	"billing.subscription.help": "All subscription plans have access to all features.",
