--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -108,7 +108,7 @@
 	"billing.cost_per_usage.description": "Si excede los límites, se aplicará el costo por uso.",
 	"billing.country": "País",
 	"billing.custom_plan": "Plan personalizado",
-	"billing.customized_plan": "Si eres una start up o necesitas ampliar y personalizar un plan para tu negocio, no dudes en contactarnos.",
+	"billing.enterprise_ready": "Listo para la empresa",
 	"billing.estimate_cost": "Estima tu coste",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
@@ -153,7 +153,7 @@
 	"billing.quotas.up-to": "Hasta",
 	"billing.save_budget": "Guardar límite de presupuesto",
 	"billing.save_continue": "Guardar y Continuar",
-	"billing.self_hosted": "Póngase en contacto con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
+	"billing.self_hosted": "<a href=\"{{ url }}\">Póngase en contacto</a> con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
 	"billing.state": "Provincia",
 	"billing.subscription.country": "Seleccione el país de facturación",
 	"billing.subscription.help": "Todos los planes de suscripción tienen acceso a todas las funciones.",
