[sc-4782] Filter processed resources table

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -194,10 +194,8 @@
 	"error.reprocessing-resources": "S'ha produït un error en el reprocessament de {{count}} recursos",
 	"farewell.message": "<p>Ens sap greu que te'n vagis {{username}}!</p>\n<p>Ens assegurarem d'eliminar el teu usuari i dades de Nuclia. En nom de l'equip de Nuclia et volem agrair el temps que has dedicat a la nostra plataforma.</p>\n<p>Si creus que podriem haver fet alguna cosa millor, sisplau <a href=\"mailto:{{email}}\">fes-nos-ho saber</a>. Ens encantaria saber-ho.</p>\n<p>Gràcies!</p>",
 	"farewell.title": "Fins aviat 👋",
-	"filter.filters_applied": "Filtres aplicats",
 	"filter.search_ontology": "Cerca l'Ontologia",
 	"filter.suggested_classification": "Classificació suggerida",
-	"filter.title": "Filtres",
 	"generic.accept": "Acceptar",
 	"generic.actions": "Accions",
 	"generic.add": "Afegir",
@@ -546,6 +544,9 @@
 	"resource.field.delete-successful": "El camp s'ha suprimit correctament",
 	"resource.field.search": "Cerca",
 	"resource.field.update-successful": "El camp s'ha actualitzat correctament",
+	"resource.filter.clear": "Esborra filtres",
+	"resource.filter.main-type": "Tipus principals",
+	"resource.filtered-by": "Filtrat per",
 	"resource.menu.annotate": "Anotar",
 	"resource.menu.classify": "Classificar",
 	"resource.menu.edit": "Edita",
@@ -588,7 +589,7 @@
 	"resource.tooltip.annotation": "Anotació",
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.edition": "Edició",
-	"resource.visible_columns_dropdown": "Es mostren les columnes",
+	"resource.visible_columns_dropdown": "Columnes mostrades",
 	"search.more_results": "mostrar més resultats",
 	"search.sort_by": "Ordenar per",
 	"search.title.answer_results": "És aquí la teva resposta?",
