--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -208,10 +208,8 @@
 	"error.reprocessing-resources": "Reprocessing failed for {{count}} resources",
 	"farewell.message": "<p>We are sad to see you go, {{username}}!</p>\n<p>We will make sure we remove your account and data from Nuclia. On behalf of Nuclia’s team, we thank you for the time you invested in our platform.</p>\n<p>If you think we could have done something better, please <a href=\"mailto:{{email}}\">let us know</a>. We would love to hear from you.</p>\n<p>Thank you!</p>",
 	"farewell.title": "See you soon 👋",
-	"filter.filters_applied": "Filters applied",
 	"filter.search_ontology": "Search ontology ",
 	"filter.suggested_classification": "Suggested classification",
-	"filter.title": "Filters",
 	"generic.accept": "Accept",
 	"generic.actions": "Actions",
 	"generic.add": "Add",
@@ -568,6 +566,9 @@
 	"resource.field.delete-successful": "Field deleted successfully",
 	"resource.field.search": "Search",
 	"resource.field.update-successful": "Field updated successfully",
+	"resource.filter.clear": "Clear filters",
+	"resource.filter.main-type": "Main types",
+	"resource.filtered-by": "Filtered by",
 	"resource.menu.annotate": "Annotate",
 	"resource.menu.classify": "Classify",
 	"resource.menu.edit": "Edit",
@@ -610,7 +611,7 @@
 	"resource.tooltip.annotation": "Annotation",
 	"resource.tooltip.classification": "Classification",
 	"resource.tooltip.edition": "Edition",
-	"resource.visible_columns_dropdown": "Columns displayed",
+	"resource.visible_columns_dropdown": "Displayed columns",
 	"search.more_results": "show more results",
 	"search.sort_by": "Sort by",
 	"search.title.answer_results": "Did that answer your question?",
