--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -194,10 +194,8 @@
 	"error.reprocessing-resources": "Error de reprocesamiento de {{count}} recursos",
 	"farewell.message": "<p>Nos entristece que te vayas {{username}}!</p>\n<p>Nos aseguraremos de eliminar tu usuario y datos de Nuclia. En nombre del equipo de Nuclia te queremos agradecer el tiempo que has dedicado a nuestra plataforma.</p>\n<p>Si crees que podríamos haber echo alguna cosa mejor, por favor <a href=\"mailto:{{email}}\">háznoslo saber</a>. Nos encantaría saberlo.</p>\n<p>Gracias!</p>",
 	"farewell.title": "Hasta pronto 👋",
-	"filter.filters_applied": "Filtros aplicados",
 	"filter.search_ontology": "Busca la Ontología",
 	"filter.suggested_classification": "Clasificación sugerida",
-	"filter.title": "Filtros",
 	"generic.accept": "Aceptar",
 	"generic.actions": "Acciones",
 	"generic.add": "Añadir",
@@ -546,6 +544,9 @@
 	"resource.field.delete-successful": "Campo eliminado con éxito",
 	"resource.field.search": "Buscar",
 	"resource.field.update-successful": "Campo actualizado con éxito",
+	"resource.filter.clear": "Borrar filtros",
+	"resource.filter.main-type": "Tipos principales",
+	"resource.filtered-by": "Filtrado por",
 	"resource.menu.annotate": "Anotar",
 	"resource.menu.classify": "Clasificar",
 	"resource.menu.edit": "Editar",
