Add review modal

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -140,7 +140,6 @@
 	"billing.parameter.searches": "Quantes cerques?",
 	"billing.parameter.training-hours": "Quantes hores d'entrenament?",
 	"billing.payment_details": "Dades de pagament",
-	"billing.payment_details.description": "El pagament no es farà efectiu fins a finals de mes en funció del vostre ús.",
 	"billing.payment_method": "Mètode de pagament",
 	"billing.postal_code": "Còdi postal",
 	"billing.quotas": "Quotes mensuals",
@@ -151,6 +150,10 @@
 	"billing.quotas.searches": "Recerques",
 	"billing.quotas.training": "Formació",
 	"billing.quotas.up-to": "Fins a",
+	"billing.review.confirm_subscription": "Confirma la teva subscripció",
+	"billing.review.cost": "Subscripció mensual de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
+	"billing.review.subscribe_to": "T'estàs subscribint a {{account}}",
+	"billing.review.title": "Revisa la teva subscripció",
 	"billing.save_budget": "Guardar límit de pressupost",
 	"billing.save_continue": "Desar i Continuar",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Poseu-vos en contacte</a> amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
