--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -153,7 +153,6 @@
 	"billing.parameter.searches": "How many searches?",
 	"billing.parameter.training-hours": "How many hours of training?",
 	"billing.payment_details": "Payment details",
-	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
 	"billing.payment_method": "Payment method",
 	"billing.postal_code": "ZIP",
 	"billing.quotas": "Monthly quotas",
@@ -164,6 +163,10 @@
 	"billing.quotas.searches": "Searches",
 	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
+	"billing.review.confirm_subscription": "Confirm your subscription",
+	"billing.review.cost": "Monthly {{cost}} subscription + consumption costs with a monthly budget restriction of {{budget}}",
+	"billing.review.subscribe_to": "Subscribing to {{account}}",
+	"billing.review.title": "Review your subscription",
 	"billing.save_budget": "Save as budget limit",
 	"billing.save_continue": "Save & Continue",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contact us</a> if you want your data self-hosted using NucliaDB to know all payment details.",
