--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -140,7 +140,6 @@
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
 	"billing.parameter.training-hours": "¿Cuántas horas de entrenamientos?",
 	"billing.payment_details": "Datos de pago",
-	"billing.payment_details.description": "El pago no se hará efectivo hasta finales de mes en función del uso realizado.",
 	"billing.payment_method": "Método de pago",
 	"billing.postal_code": "Código postal",
 	"billing.quotas": "Cuotas mensuales",
@@ -151,6 +150,10 @@
 	"billing.quotas.searches": "Búsquedas",
 	"billing.quotas.training": "Capacitación",
 	"billing.quotas.up-to": "Hasta",
+	"billing.review.confirm_subscription": "Confirma tu suscripción",
+	"billing.review.cost": "Suscripción mensual de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
+	"billing.review.subscribe_to": "Te estás suscribiendo a {{account}}",
+	"billing.review.title": "Revisa tu suscripción",
 	"billing.save_budget": "Guardar límite de presupuesto",
 	"billing.save_continue": "Guardar y Continuar",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Póngase en contacto</a> con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
