Ner management page refactoring: [sc-4744], [sc-5026], [sc-3432]

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -170,24 +170,6 @@
 	"empty.title": "No hem trobat cap resultat :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantitats i mesures",
-	"entity.add_group": "Afegeix un grup d'entitats",
-	"entity.add_short_description": "Afegeix un títol o línia de text descriptiva",
-	"entity.create_group": "Crear un grup d'entitats",
-	"entity.delete_entities_warning": "Si suprimeixes aquesta informació, desapareixerà de tots els recursos i suggeriments de cerca",
-	"entity.delete_entity": "Eliminar l’entitat",
-	"entity.entities": "Entitats",
-	"entity.entity": "Entitat",
-	"entity.entity_name": "Nom de la name entity",
-	"entity.entity_search": "Cerca entitat",
-	"entity.form.color": "Color del grup d'entitats",
-	"entity.form.color_placeholder": "Color hexadecimal (#ffdd1a)",
-	"entity.form.entities_help": "Llista d'entitats separades per comes",
-	"entity.form.title": "Títol del grup d'entitats",
-	"entity.new_entity": "Crea una nova entitat",
-	"entity.save_changes": "Guardar l’edició",
-	"entity.search_synonym": "Busca i selecciona el sinònim",
-	"entity.synonym": "Sinònim",
-	"entity.unlink_entity": "Desenllaçar l'entitat. Es crearà una nova entitat no relacionada",
 	"error.deleting-resource": "No s'ha pogut suprimir el recurs",
 	"error.deleting-resources": "No s'ha pogut suprimir {{count}} recursos",
 	"error.reprocessing-resource": "No s'ha pogut tornar a processar el recurs",
@@ -244,7 +226,6 @@
 	"generic.manage_account": "Gestió del compte",
 	"generic.member": "Member",
 	"generic.name": "Nom",
-	"generic.name_entity": "Concepte clau",
 	"generic.named-entities": "Entitats anomenades",
 	"generic.next": "Següent",
 	"generic.next_step": "Següent pas",
@@ -404,6 +385,30 @@
 	"modal.upload.success": "Fitxer pujat correctament",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
+	"ner-add-entity-dialog.title": "Afegeix entitats amb nom",
+	"ner-family-dialog.family-color": "Color de la família NER",
+	"ner-family-dialog.family-color-placeholder": "Color hexadecimal (#ffdd1a)",
+	"ner-family-dialog.family-name": "Títol de la família Ner",
+	"ner-family-dialog.ner-list": "Entitats anomenades",
+	"ner-family-dialog.ner-list-help": "Entitats amb nom separades per comes",
+	"ner-family-dialog.ner-list-title": "Introduïu manualment la llista d'entitats anomenades",
+	"ner-family-dialog.new-family-title": "Crea una família d'entitats amb nom",
+	"ner-family-dialog.upload-csv-button": "Seleccioneu CSV",
+	"ner-family-dialog.upload-csv-format": "Format CSV esperat: una columna amb una entitat anomenada per fila.",
+	"ner-family-dialog.upload-csv-title": "Carregueu un fitxer CSV",
+	"ner-family-toolbar.add-button": "Afegeix una entitat amb nom",
+	"ner-family-toolbar.edit-button": "Edita la família d'entitats amb nom",
+	"ner-family-toolbar.remove-button": "Suprimeix la família d'entitats amb nom",
+	"ner-list.add-duplicate-tooltip": "Afegeix com a duplicat de",
+	"ner-list.delete-entity-tooltip": "Suprimeix l'entitat",
+	"ner-list.duplicates": "Duplicats",
+	"ner-list.duplicates-of": "Duplicats de",
+	"ner-list.remove-duplicate-tooltip": "Sortiu dels duplicats",
+	"ner-management.add-family": "Família de l'entitat",
+	"ner-management.page-description": "Creeu la vostra pròpia llista d'entitats amb nom, personalitzeu-les i, a continuació, entreneu-les. Podeu carregar-los des d'un fitxer CSV per accelerar el procés o introduir totes les entitats anomenades manualment.",
+	"ner-management.page-title": "Gestió d'entitats denominades",
+	"ner-remove-family-dialog.description": "Si suprimiu aquesta família d'entitats amb nom, s'eliminarà de tots els recursos i suggeriments de cerca.",
+	"ner-remove-family-dialog.title": "Confirmeu que voleu suprimir \"{{familyName}}\"?",
 	"onboarding.account_creation": "Creació del compte...",
 	"onboarding.company": "Per a quina empresa treballes?",
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
