--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -170,24 +170,6 @@
 	"empty.title": "No hemos encontrado ningún resultado :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Cantidades y medidas",
-	"entity.add_group": "Agregar grupo de entidades",
-	"entity.add_short_description": "Añade un título o línea de texto descriptiva",
-	"entity.create_group": "Crear grupo de entidades",
-	"entity.delete_entities_warning": "Si elimina esta información, desaparecerá de todos los recursos y sugerencias de búsqueda",
-	"entity.delete_entity": "Eliminar la entidad",
-	"entity.entities": "Entidades",
-	"entity.entity": "Entidad",
-	"entity.entity_name": "Nombre de la name entity",
-	"entity.entity_search": "Busca entidad",
-	"entity.form.color": "Color del grupo de entidades",
-	"entity.form.color_placeholder": "Color hexadecimal (#ffdd1a)",
-	"entity.form.entities_help": "Lista de entidades separadas por coma",
-	"entity.form.title": "Título del grupo de entidades",
-	"entity.new_entity": "Crea una nueva entidad",
-	"entity.save_changes": "Guarda la edición",
-	"entity.search_synonym": "Busca y selecciona el sinónimo",
-	"entity.synonym": "Sinónimo",
-	"entity.unlink_entity": "Desenlazar la entidad. Se creará una nueva entidad no relacionada",
 	"error.deleting-resource": "Error al eliminar el recurso",
 	"error.deleting-resources": "Error al eliminar {{count}} recursos",
 	"error.reprocessing-resource": "Error al reprocesar el recurso",
@@ -244,7 +226,6 @@
 	"generic.manage_account": "Gestionar la cuenta",
 	"generic.member": "Member",
 	"generic.name": "Nombre",
-	"generic.name_entity": "Concepto clave",
 	"generic.named-entities": "Entidades nombradas",
 	"generic.next": "Siguiente",
 	"generic.next_step": "Siguiente paso",
@@ -404,6 +385,30 @@
 	"modal.upload.success": "Archivo cargado con éxito",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
+	"ner-add-entity-dialog.title": "Agregar entidades nombradas",
+	"ner-family-dialog.family-color": "Color de la familia NER",
+	"ner-family-dialog.family-color-placeholder": "Color hexadecimal (#ffdd1a)",
+	"ner-family-dialog.family-name": "Título de la familia NER",
+	"ner-family-dialog.ner-list": "Entidades nombradas",
+	"ner-family-dialog.ner-list-help": "Entidades nombradas separadas por comas",
+	"ner-family-dialog.ner-list-title": "Ingrese la lista de entidades nombradas manualmente",
+	"ner-family-dialog.new-family-title": "Crear familia de entidades con nombre",
+	"ner-family-dialog.upload-csv-button": "Seleccione CSV",
+	"ner-family-dialog.upload-csv-format": "Formato CSV esperado: una columna con una entidad nombrada por fila.",
+	"ner-family-dialog.upload-csv-title": "Subir un archivo CSV",
+	"ner-family-toolbar.add-button": "Agregar entidad nombrada",
+	"ner-family-toolbar.edit-button": "Editar familia de entidades con nombre",
+	"ner-family-toolbar.remove-button": "Eliminar familia de entidad nombrada",
+	"ner-list.add-duplicate-tooltip": "Añadir como duplicado de",
+	"ner-list.delete-entity-tooltip": "Eliminar entidad",
+	"ner-list.duplicates": "Duplicados",
+	"ner-list.duplicates-of": "Duplicados de",
+	"ner-list.remove-duplicate-tooltip": "Salir de duplicados",
+	"ner-management.add-family": "Familia de entidades",
+	"ner-management.page-description": "Cree su propia lista de entidades con nombre, personalícelas y luego entrénelas. Puede cargarlos desde un archivo CSV para acelerar el proceso o ingresar todas las entidades nombradas manualmente.",
+	"ner-management.page-title": "Gestión de entidades nombradas",
+	"ner-remove-family-dialog.description": "Si elimina esta familia de entidades con nombre, se eliminará de todos los recursos y sugerencias de búsqueda.",
+	"ner-remove-family-dialog.title": "¿Seguro que quieres eliminar \"{{familyName}}\"?",
 	"onboarding.account_creation": "Creación de cuenta…",
 	"onboarding.company": "¿Para qué empresa estás trabajando?",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
