[sc-4744] NER management page (#706)
* Improve csv-select component so we can reuse it for entities

  - update style (spacing) and element positioning (CSV format details after the button)
  - adapt upload dialog components using it accordingly
  - add `confirmData` input in csv-select: when present, we open a confirmation dialog before uploading (needed for entity management dialog)
  - add `buttonKind` input allowing to change the kind of select csv button

* [sc-4426] Update SDK after entitiesgroups endpoints changes

* Ner management page refactoring: [sc-4744], [sc-5026], [sc-3432]

* Fix contributor build

* Fix typo + remove obsolete methods from search widget api

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -183,25 +183,6 @@
 	"empty.title": "No results.",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantities and measures",
-	"entity.add_group": "Add entity group",
-	"entity.add_short_description": "",
-	"entity.create_group": "Create entity group",
-	"entity.delete_entities_warning": "If you delete this insight, it will disappear from all resources and search suggestions",
-	"entity.delete_entity": "Delete entity",
-	"entity.entities": "Entities",
-	"entity.entity": "Entity",
-	"entity.entity_name": "Name entity",
-	"entity.entity_search": "Entity search",
-	"entity.form.color": "Entity group color",
-	"entity.form.color_placeholder": "Hexadecimal color (#ffdd1a)",
-	"entity.form.entities_help": "List of entities separated by comma",
-	"entity.form.title": "Entity group title",
-	"entity.name_entities_management": "Named entities management",
-	"entity.new_entity": "Create a new entity",
-	"entity.save_changes": "Save changes",
-	"entity.search_synonym": "Search and select the synonym",
-	"entity.synonym": "Synonyms",
-	"entity.unlink_entity": "Unlink entity. A new unrelated entity will be created",
 	"error.deleting-resource": "Deleting the resource failed",
 	"error.deleting-resources": "Deletion failed for {{count}} resources",
 	"error.reprocessing-resource": "Reprocessing the resource failed",
@@ -261,7 +242,6 @@
 	"generic.manage_account": "Manage account",
 	"generic.member": "Member",
 	"generic.name": "Name",
-	"generic.name_entity": "Insight",
 	"generic.named-entities": "Named entities",
 	"generic.next": "Next",
 	"generic.next_step": "Next step",
@@ -423,6 +403,30 @@
 	"modal.upload.success": "File uploaded successfully",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
+	"ner-add-entity-dialog.title": "Add named entities",
+	"ner-family-dialog.family-color": "NER family color",
+	"ner-family-dialog.family-color-placeholder": "Hexadecimal color (#ffdd1a)",
+	"ner-family-dialog.family-name": "NER family title",
+	"ner-family-dialog.ner-list": "Named entities",
+	"ner-family-dialog.ner-list-help": "Named entities comma-separated",
+	"ner-family-dialog.ner-list-title": "Enter named entity list manually",
+	"ner-family-dialog.new-family-title": "Create named entity family",
+	"ner-family-dialog.upload-csv-button": "Select CSV",
+	"ner-family-dialog.upload-csv-format": "Expected CSV format: one column with one named entity per row.",
+	"ner-family-dialog.upload-csv-title": "Upload a CSV file",
+	"ner-family-toolbar.add-button": "Add named entity",
+	"ner-family-toolbar.edit-button": "Edit named entity family",
+	"ner-family-toolbar.remove-button": "Delete named entity family",
+	"ner-list.add-duplicate-tooltip": "Add as duplicate of",
+	"ner-list.delete-entity-tooltip": "Delete entity",
+	"ner-list.duplicates": "Duplicates",
+	"ner-list.duplicates-of": "Duplicates of",
+	"ner-list.remove-duplicate-tooltip": "Move out of duplicates",
+	"ner-management.add-family": "Entity family",
+	"ner-management.page-description": "Create your own list of named entities, customize them, and then train them. You can upload them from a CSV file for speeding up the process, or enter all the named entities manually.",
+	"ner-management.page-title": "Named entities management",
+	"ner-remove-family-dialog.description": "If you delete this named entities family, it will be removed from all resources and search suggestions.",
+	"ner-remove-family-dialog.title": "Are you sure you want to delete \"{{familyName}}\"?",
 	"onboarding.account_creation": "Account creation…",
 	"onboarding.company": "What company are you working for?",
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
