Add card authentication

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -97,9 +97,11 @@
 	"autocomplete.section.next_words": "Paraules suggerides",
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
 	"billing.address": "Adreça",
+	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Estimació del pressupost",
 	"billing.card_details": "Detalls de la targeta",
+	"billing.card_error": "No hem pogut validar la teva targeta.",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
 	"billing.company": "Empresa",
