--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -97,9 +97,11 @@
 	"autocomplete.section.next_words": "Palabras sugeridas",
 	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.address": "Dirección",
+	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Estimación del presupuesto",
 	"billing.card_details": "Detalles de la tarjeta",
+	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
 	"billing.company": "Empresa",
